--- a/KickbackKingdomLauncher/Views/Windows/InstallerWindow.axaml
+++ b/KickbackKingdomLauncher/Views/Windows/InstallerWindow.axaml
@@ -12,10 +12,26 @@
 	<StackPanel Margin="20" Spacing="10">
 		<TextBlock Text="Install Location" FontWeight="Bold"/>
 
-		<DockPanel>
-			<TextBox Text="{Binding InstallPath}" IsReadOnly="True" DockPanel.Dock="Left" Width="250"/>
-			<Button Content="Change..." Command="{Binding TriggerPickFolderCommand}" Margin="8,0,0,0"/>
-		</DockPanel>
+		<StackPanel>
+			<ComboBox
+    ItemsSource="{Binding Vaults}"
+    SelectedItem="{Binding SelectedVault}"
+    MinWidth="250">
+				<ComboBox.ItemTemplate>
+					<DataTemplate>
+						<StackPanel Spacing="2">
+							<TextBlock Text="{Binding Name}" FontWeight="Bold"/>
+							<TextBlock Text="{Binding Path}" FontStyle="Italic" FontSize="11"/>
+						</StackPanel>
+					</DataTemplate>
+				</ComboBox.ItemTemplate>
+			</ComboBox>
+
+
+
+			<TextBlock Text="{Binding InstallPath}" FontStyle="Italic" Margin="0,5,0,0" />
+		</StackPanel>
+
 
 		<TextBlock Text="Drive Information" FontWeight="Bold" Margin="0,10,0,0"/>
 
@@ -34,7 +50,11 @@
 
 		<StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0" Spacing="10">
 			<Button Content="Cancel" Command="{Binding CancelCommand}" Width="100"/>
-			<Button Content="Install" Command="{Binding InstallCommand}" Width="100" IsEnabled="{Binding HasEnoughSpace}"/>
+			<Button Content="Install"
+        Command="{Binding InstallCommand}"
+        Width="100"
+        IsEnabled="{Binding CanInstall}" />
+
 		</StackPanel>
 	</StackPanel>
 </Window>
