--- a/KickbackKingdomLauncher/Views/Windows/InstallerWindow.axaml
+++ b/KickbackKingdomLauncher/Views/Windows/InstallerWindow.axaml
@@ -2,7 +2,7 @@
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:vm="clr-namespace:KickbackKingdomLauncher.ViewModels.Windows"
-    x:Class="KickbackKingdomLauncher.Views.InstallerWindow"
+    x:Class="KickbackKingdomLauncher.Views.Windows.InstallerWindow"
     x:DataType="vm:InstallerViewModel"
     Title="Install Game"
     Width="400" Height="300"
