--- a/KickbackKingdomLauncher/Views/Windows/LoginWindow.axaml
+++ b/KickbackKingdomLauncher/Views/Windows/LoginWindow.axaml
@@ -7,8 +7,7 @@
     x:DataType="vm:LoginViewModel"
     Title="Kickback Kingdom - Login"
     Width="680" Height="400"
-    CanResize="False"
-    Background="#1e1c2e">
+    CanResize="False">
 
 	<Grid RowDefinitions="Auto,*">
 		<!-- Title Bar -->
