--- a/KickbackKingdomLauncher/Views/Windows/MainWindow.axaml
+++ b/KickbackKingdomLauncher/Views/Windows/MainWindow.axaml
@@ -1,23 +1,22 @@
 <Window
-  x:Name="RootWindow"
-
   xmlns="https://github.com/avaloniaui"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:views="clr-namespace:KickbackKingdomLauncher.Views"
   xmlns:vm="clr-namespace:KickbackKingdomLauncher.ViewModels.Windows"
   xmlns:software="clr-namespace:KickbackKingdomLauncher.ViewModels.Software;assembly=KickbackKingdomLauncher"
+  xmlns:controls="clr-namespace:KickbackKingdomLauncher.Views.Controls"
   x:Class="KickbackKingdomLauncher.Views.Windows.MainWindow"
   x:DataType="vm:MainViewModel"
   Title="Kickback Kingdom Launcher"
   Width="1000" Height="600"
-  Icon="/Assets/avalonia-logo.ico"
-  Background="#1a1a2e">
+  Icon="/Assets/avalonia-logo.ico">
 
 
 
 
 	<DockPanel LastChildFill="True">
 
+		<controls:TitleBar DockPanel.Dock="Top" />
 		<!-- Clickable Footer Docked to Bottom -->
 		<Border Background="#1b1d2b"
         Height="40"
